--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "imagekit": "^6.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
     "path-to-regexp": "^8.2.0",
